--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
