--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.2"
   },
   "devDependencies": {
