--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "Promise": "^1.0.5",
+    "request-promise": "^4.2.6",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuelidate": "^0.7.6",
