--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "axios": "^0.21.1",
+    "cloudinary": "^1.23.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "multer": "^1.4.2",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuelidate": "^0.7.6",
