--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
