--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
+    "at-ui": "^1.3.3",
+    "at-ui-style": "^1.5.1",
     "axios": "^0.21.1",
     "cloudinary": "^1.23.0",
     "core-js": "^3.6.5",
