--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tunisia-discovery",
+  "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,10 +11,11 @@
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "Promise": "^1.0.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuelidate": "^0.7.6",
-    "vuetify": "^2.4.2"
+    "vuetify": "^2.4.2",
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
