--- a/client/package.json
+++ b/client/package.json
@@ -1,60 +1,59 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": false,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@northwalker/vue-hotel-datepicker": "^2.0.7",
-    "at-ui": "^1.3.3",
-    "at-ui-style": "^1.5.1",
-    "axios": "^0.21.1",
-    "cloudinary": "^1.23.0",
-    "core-js": "^3.6.5",
-    "Promise": "^1.0.5",
-    "js-cookie": "^2.2.1",
-    "Promise": "^1.0.5",
-    "request-promise": "^4.2.6",
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.9",
-    "vuelidate": "^0.7.6",
-    "vuetify": "^2.4.2",
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.9",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "client",
+    "version": "0.1.0",
+    "private": false,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "@northwalker/vue-hotel-datepicker": "^2.0.7",
+        "at-ui": "^1.3.3",
+        "at-ui-style": "^1.5.1",
+        "axios": "^0.21.1",
+        "cloudinary": "^1.23.0",
+        "core-js": "^3.6.5",
+        "js-cookie": "^2.2.1",
+        "Promise": "^1.0.5",
+        "request-promise": "^4.2.6",
+        "vue": "^2.6.12",
+        "vue-router": "^3.4.9",
+        "vuelidate": "^0.7.6",
+        "vuetify": "^2.4.2"
     },
-    "rules": {
-      "strict": "off"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "sass": "^1.19.0",
+        "sass-loader": "^8.0.0",
+        "vue-cli-plugin-vuetify": "~2.0.9",
+        "vue-template-compiler": "^2.6.11",
+        "vuetify-loader": "^1.3.0"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {
+            "strict": "off"
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
