--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "client",
+    "name": "tunisia-discovery",
     "version": "0.1.0",
-    "private": false,
+    "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
@@ -11,8 +11,11 @@
         "@northwalker/vue-hotel-datepicker": "^2.0.7",
         "at-ui": "^1.3.3",
         "at-ui-style": "^1.5.1",
-        "axios": "^0.21.1",
         "cloudinary": "^1.23.0",
+        "dotenv": "^8.2.0",
+        "multer": "^1.4.2",
+        "vee-validate": "^3.4.5",
+        "axios": "^0.21.1",
         "core-js": "^3.6.5",
         "js-cookie": "^2.2.1",
         "Promise": "^1.0.5",
