--- a/client/package.json
+++ b/client/package.json
@@ -1,63 +1,63 @@
 {
-    "name": "tunisia-discovery",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+  "name": "tunisia-discovery",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@mdi/js": "^5.9.55",
+    "@northwalker/vue-hotel-datepicker": "^2.0.7",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
+    "leaflet": "^1.7.1",
+    "mdbvue": "^6.7.2",
+    "v-video-embed": "^1.0.8",
+    "vue": "^2.6.12",
+    "vue-embed": "^2.1.1",
+    "vue-google-maps": "^0.1.21",
+    "vue-router": "^3.4.9",
+    "vue2-leaflet": "^2.6.0",
+    "vuelidate": "^0.7.6",
+    "vuetify": "^2.4.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.0",
+    "less-loader": "^7.3.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.3.3",
+    "vue-cli-plugin-vuetify": "~2.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "dependencies": {
-        "@mdi/js": "^5.9.55",
-        "@northwalker/vue-hotel-datepicker": "^2.0.7",
-        "Promise": "^1.0.5",
-        "at-ui": "^1.3.3",
-        "at-ui-style": "^1.5.1",
-        "axios": "^0.21.1",
-        "cloudinary": "^1.23.0",
-        "core-js": "^3.6.5",
-        "dotenv": "^8.2.0",
-        "js-cookie": "^2.2.1",
-        "multer": "^1.4.2",
-        "request-promise": "^4.2.6",
-        "vee-validate": "^3.4.5",
-        "vue": "^2.6.12",
-        "vue-router": "^3.4.9",
-        "vuelidate": "^0.7.6",
-        "vuetify": "^2.4.2"
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
     },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^6.2.2",
-        "sass": "^1.19.0",
-        "sass-loader": "^8.0.0",
-        "vue-cli-plugin-vuetify": "~2.0.9",
-        "vue-template-compiler": "^2.6.11",
-        "vuetify-loader": "^1.3.0"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {
-            "strict": "off"
-        }
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
