--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,24 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "cloudinary": "^1.23.0",
-        "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "mongoose": "^5.11.12",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2",
-        "bcrypt": "^5.0.0",
-        "jsonwebtoken": "^8.5.1",
-        "Promise": "^1.0.5",
-        "request-promise": "^4.2.6"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.6"
-    },
-    "scripts": {
-        "start": "nodemon server.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.12",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
